src/objects/Payment_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan</relationshipLabel>
        <relationshipName>Payment_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Payment_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Payment Plan</relationshipLabel>
        <relationshipName>Payment_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Number__c</fullName>
        <label>Payment Plan Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Payment Plan</label>
    <nameField>
        <label>Payment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>